# 3d_gaussian_splatting

./: .gitignore  CMakeLists.txt  Makefile  mycmake.sh  myrun.sh
src/: gaussian_model.cpp  gaussian_model.h  main.cpp  params.cpp  params.h  train.cpp  util.cpp  util.h
src/arguments/: params.cpp  params.h
src/scene/: camera.cpp  camera.h  colmap_loader.cpp  colmap_loader.h  dataset_readers.cpp  dataset_readers.h  gaussian_model.cpp  gaussian_model.h  gaussian_model_unittest.cpp  scene.cpp  scene.h
src/utils/: camera_utils.cpp  camera_utils.h  general_utils.cpp  general_utils.h  graphics_utils.cpp  graphics_utils.h  system_utils.cpp  system_utils.h  train_utils.cpp
src/utils/train_utils/: util.cpp
